# ProstoPayTestTask

./: Dockerfile  READMY.md  docker-compose.yml  pyproject.toml
source/: config.py
source/hashmap/: hashmap.py
source/user_handler/: models.py  pydantic_models.py  user_handler.py
tests/: conftest.py  test_hashmap.py  test_user_handler.py
tests/factories/: user.py
