[tool.poetry]
name = "testtask"
version = "0.1.0"
description = ""
authors = ["Oleksii Dolhov <oleksii.dolhov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.7.1"
black = "^23.12.0"
pytest = "^7.4.3"
isort = "^5.13.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
pytest-asyncio = "^0.23.2"
pydantic = "^2.5.2"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
disallow_subclassing_any = false
disallow_untyped_defs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
asyncio_mode = "auto"
